Refactor codebase and introduce more go-like constructs (#12)
* Refactor codebase and introduce more go-like constructs

* fix git attribute path

* fix staticcheck errors
